@@ -1,3 +1,9 @@
+2015-04-06  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* dgnushack.el (define-obsolete-function-alias): Add a compiler-marco
+	and a runtime function for it, of which the XEmacs version takes only
+	two arguments.
+
 2015-04-06  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Use American spelling for 'normalize'
